--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ main {
   background-repeat: no-repeat;
   background-size: cover;
 }
-#s1 div {
+#s1 #s1-container {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -45,17 +45,17 @@ main {
   width: 100%;
   height: 100%;
 }
-#s1 div img {
+#s1 #s1-container img {
   width: 250px;
 }
-#s1 div h2 {
+#s1 #s1-container h2 {
   color: white;
   font-family: "Grozen Medical", sans-serif;
   font-weight: 400;
   letter-spacing: 5%;
   line-height: 35px;
 }
-#s1 div button {
+#s1 #s1-container button {
   width: 360px;
   height: 70px;
   font-size: 1.6rem;
@@ -71,8 +71,6 @@ main {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border-top-right-radius: 24px;
-  border-top-left-radius: 24px;
   overflow: hidden;
 }
 #s2 #s2-container {
@@ -168,6 +166,60 @@ main {
   background-position-y: 100px;
 }
 
+@media screen and (max-width: 768px) {
+  #s1 {
+    flex-direction: column;
+    background-image: url("../img/img01-mobile.png");
+    background-size: contain;
+  }
+  #s1 #s1-container {
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+  }
+  #s1 #s1-container img {
+    width: 124px;
+    padding-top: 50px;
+  }
+  #s1 #s1-container h2 {
+    font-size: 1.2em;
+    text-align: center;
+    padding-top: 100px;
+  }
+  #s1 #s1-container button {
+    width: 250px;
+    height: 50px;
+    font-size: 1em;
+    margin-bottom: 50px;
+  }
+  #s1 #s1-container button span {
+    font-size: 1em;
+  }
+  #s1 #s1-botton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    width: 100%;
+    height: 200px;
+    border-top-right-radius: 24px;
+    border-top-left-radius: 24px;
+  }
+  #s1 #s1-botton img {
+    width: 200px;
+  }
+  #s2 {
+    background-color: white;
+    background-image: none;
+    box-shadow: none;
+  }
+}
+@media screen and (min-width: 769px) and (max-width: 1279px) {
+  #s2 {
+    border-top-right-radius: 24px;
+    border-top-left-radius: 24px;
+  }
+}
 .text-bold {
   font-weight: 900;
 }
