--- a/styles/style.scss
+++ b/styles/style.scss
@@ -95,13 +95,6 @@ main {
             align-items: center;
             justify-content: end;
             position: relative;
-
-            img {
-                position: absolute;
-                width: 1200px;
-                bottom: -100px;
-                right: -150px;
-            }
         }
 
         div:last-child {
@@ -239,13 +232,56 @@ main {
         background-color: white;
         background-image: none;
         box-shadow: none;
+
+        #s2-container {
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            div {
+                width: 100%;
+            }
+
+            div:first-child {
+                align-items: center;
+                justify-content: center;
+                height: 35%;
+
+                #s2-img {
+                    position: relative;
+                    width: 800px;
+                    padding-right: 325px;
+                }
+            }
+
+            div:last-child {
+                justify-content: center;
+                padding-top: 50px;
+                overflow-y: scroll;
+
+                p {
+                    padding: 0px 10px;
+                }
+            }
+        }
+
+        #s2-bottom {
+            display: none;
+        }
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1279px) {
+@media screen and (min-width: 769px) {
     #s2 {
         border-top-right-radius: 24px;
         border-top-left-radius: 24px;
+    }
+
+    #s2-img {
+        position: absolute;
+        width: 1200px;
+        bottom: -100px;
+        right: -150px;
     }
 }
 
