Teste para o scrol.

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ main {
   #s2 #s2-container div:first-child {
     align-items: center;
     justify-content: center;
-    height: 35%;
+    height: 25% !important;
   }
   #s2 #s2-container div:first-child #s2-img {
     position: relative;
@@ -227,8 +227,10 @@ main {
   }
   #s2 #s2-container div:last-child {
     justify-content: center;
-    padding-top: 50px;
+    padding-top: 100px;
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    height: 75% !important;
   }
   #s2 #s2-container div:last-child p {
     padding: 0px 10px;
