--- a/styles/style.css
+++ b/styles/style.css
@@ -238,6 +238,9 @@ main {
   #s2 #s2-bottom {
     display: none;
   }
+  #carousel {
+    overflow: hidden;
+  }
 }
 @media screen and (min-width: 769px) {
   #s2 {
@@ -249,6 +252,14 @@ main {
     width: 1200px;
     bottom: -100px;
     right: -150px;
+  }
+  #carousel {
+    display: flex;
+    padding-top: 140px;
+    padding-bottom: 10px;
+  }
+  #carousel img {
+    width: 300px;
   }
 }
 .text-bold {
