--- a/styles/style.scss
+++ b/styles/style.scss
@@ -90,20 +90,69 @@ main {
             align-items: center;
             justify-content: center;
             overflow: hidden;
-
-            
-            img {
-                height: 800px;
-                padding-right: 250px;
-                padding-bottom: 200px;
-                
-            }
         }
 
         #s2-text {
             display: flex;
             align-items: center;
             justify-content: start;
+
+            p {
+                letter-spacing: 6%;
+                line-height: 18px;
+            }
+        }
+    }
+}
+
+#s2-s3 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: black;
+    width: 100%;
+    height: 120px;
+
+    p {
+        color: white;
+        text-align: center;
+        line-height: 26px;
+    }
+}
+
+#s3 {
+    display: flex;
+    background-color: white;
+    background-image: url('/img/img04.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    #s3-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        overflow: hidden;
+
+        #s3-carroucel {
+            overflow: hidden;
+            
+            #carrousel-container {
+                display: flex;
+                width: 100%;
+                transition: transform 0.5s ease-in-out;
+                transform: translateX(0);
+                overflow-x: scroll;
+                scroll-snap-type: x mandatory;
+
+                img {
+                    object-fit: cover;
+                    scroll-snap-align: start;
+                }
+            }
         }
     }
 }
@@ -154,12 +203,30 @@ main {
                 overflow-y: scroll;
                 height: 60%;
 
+                &::-webkit-scrollbar {
+                    display: none;
+                }
+
                 p {
                     padding: 10px 15px 0 15px;
                 }
             }
         }
     }
+
+    #s2-s3 p {
+        font-size: 0.6em;
+    }
+
+    #s3-title img {
+        height: 30px;
+        padding-top: 10px;
+    }
+
+    #carrousel-container img {
+        height: 230px;
+    }
+
 }
 
 @media screen and (min-width: 769px) and (max-width: 992px) {
@@ -173,6 +240,26 @@ main {
 
     #s2-container {
         flex-direction: column;
+
+        #s2-img {
+            height: 50%;
+
+            img {
+                height: 600px !important;
+                padding-right: 300px;
+                padding-bottom: 100px;
+            }
+        }
+
+        #s2-text {
+            flex-direction: column;
+            align-items: start;
+            height: 50%;
+
+            p {
+                padding-top: 50px;
+            }
+        }
     }
 }
 
@@ -185,8 +272,26 @@ main {
         }
     }
 
-    #s2-container div {
-        width: 50%;
+    #s2-container {
+
+        div {
+            width: 50%;
+        }
+
+        #s2-img {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+
+        
+            img {
+                height: 800px;
+                padding-right: 250px;
+                padding-bottom: 200px;
+                
+            }
+        }
     }
 }
 
