--- a/styles/style.css
+++ b/styles/style.css
@@ -122,18 +122,17 @@ main {
   align-items: center;
   overflow: hidden;
 }
-#s3 #s3-container #s3-carroucel {
-  overflow: hidden;
-}
-#s3 #s3-container #s3-carroucel #carrousel-container {
+#s3 #s3-container #carrousel-container {
   display: flex;
   width: 100%;
   transition: transform 0.5s ease-in-out;
   transform: translateX(0);
-  overflow-x: scroll;
+  padding-top: 20px;
+  padding-left: 5px;
 }
-#s3 #s3-container #s3-carroucel #carrousel-container img {
+#s3 #s3-container #carrousel-container img {
   object-fit: cover;
+  width: 100%;
 }
 
 @media screen and (max-width: 768px) {
@@ -186,7 +185,7 @@ main {
   }
   #s3-title img {
     height: 30px;
-    padding-top: 10px;
+    padding-top: 40px;
   }
   #carrousel-container img {
     height: 230px;
@@ -217,6 +216,13 @@ main {
   }
   #s2-container #s2-text p {
     padding-top: 50px;
+  }
+  #carrousel-container {
+    padding-left: 64px !important;
+    gap: 12px;
+  }
+  #carrousel-container img {
+    height: 400px !important;
   }
 }
 @media screen and (min-width: 993px) {
