--- a/styles/style.scss
+++ b/styles/style.scss
@@ -136,22 +136,18 @@ main {
         flex-direction: column;
         align-items: center;
         overflow: hidden;
-
-        #s3-carroucel {
-            overflow: hidden;
             
-            #carrousel-container {
-                display: flex;
-                width: 100%;
-                transition: transform 0.5s ease-in-out;
-                transform: translateX(0);
-                overflow-x: scroll;
-                
+        #carrousel-container {
+            display: flex;
+            width: 100%;
+            transition: transform 0.5s ease-in-out;
+            transform: translateX(0);
+            padding-top: 20px;
+            padding-left: 5px;
 
-                img {
-                    object-fit: cover;
-                    
-                }
+            img {
+                object-fit: cover;
+                width: 100%;
             }
         }
     }
@@ -220,11 +216,13 @@ main {
 
     #s3-title img {
         height: 30px;
-        padding-top: 10px;
+        padding-top: 40px;
     }
 
-    #carrousel-container img {
-        height: 230px;
+    #carrousel-container {
+        img {
+            height: 230px;
+        }
     }
 
 }
@@ -259,6 +257,15 @@ main {
             p {
                 padding-top: 50px;
             }
+        }
+    }
+
+    #carrousel-container {
+        padding-left: 64px !important;
+        gap: 12px;
+
+        img {
+            height: 400px !important;
         }
     }
 }
