--- a/styles/style.css
+++ b/styles/style.css
@@ -119,20 +119,31 @@ main {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   overflow: hidden;
 }
-#s3 #s3-container #carrousel-container {
+#s3 #s3-container #s3-title {
   display: flex;
-  width: 100%;
+  justify-content: center;
+}
+#s3 #s3-container #s3-carroucel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#s3 #s3-container #s3-carroucel #carrousel-container {
+  display: flex;
   transition: transform 0.5s ease-in-out;
   transform: translateX(0);
   padding-top: 20px;
   padding-left: 5px;
 }
-#s3 #s3-container #carrousel-container img {
+#s3 #s3-container #s3-carroucel #carrousel-container img {
   object-fit: cover;
   width: 100%;
+}
+#s3 #s3-container #s3-text {
+  display: flex;
+  justify-content: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -190,6 +201,15 @@ main {
   #carrousel-container img {
     height: 230px;
   }
+  #s3-text {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+  #s3-text p {
+    padding: 30px 20px;
+    font-size: 0.8em;
+  }
 }
 @media screen and (min-width: 769px) and (max-width: 992px) {
   #s1 {
@@ -217,12 +237,19 @@ main {
   #s2-container #s2-text p {
     padding-top: 50px;
   }
+  #s3-title img {
+    height: 50px;
+    padding-top: 40px;
+  }
   #carrousel-container {
     padding-left: 64px !important;
-    gap: 12px;
+    gap: 64px;
   }
   #carrousel-container img {
     height: 400px !important;
+  }
+  #s3-text p {
+    padding: 40px 30px;
   }
 }
 @media screen and (min-width: 993px) {
@@ -245,6 +272,17 @@ main {
     height: 800px;
     padding-right: 250px;
     padding-bottom: 200px;
+  }
+  #s3-title img {
+    height: 50px;
+    padding-top: 40px;
+  }
+  #carrousel-container img {
+    height: 180px;
+  }
+  #s3-text p {
+    padding: 50px 0;
+    font-size: 1em;
   }
 }
 .text-bold {
