Ajustes na seção 3

--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,10 @@ main {
   }
   #s3-title img {
     height: 30px;
-    padding-top: 40px;
+    padding-top: 50px;
+  }
+  #carrousel-container {
+    padding: 40px 0px !important;
   }
   #carrousel-container img {
     height: 230px;
@@ -275,7 +278,10 @@ main {
   }
   #s3-title img {
     height: 50px;
-    padding-top: 40px;
+    padding-top: 80px;
+  }
+  #carrousel-container {
+    padding-top: 80px !important;
   }
   #carrousel-container img {
     height: 180px;
