--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,30 @@
   box-shadow: 0px 439px 123px 0px rgba(253, 83, 46, 0);
 }
 
+.bronze {
+  background: linear-gradient(90deg, #926D5C 0%, #B18C77 100%), linear-gradient(92.43deg, rgba(246, 216, 198, 0) 30.84%, #F4D5C3 58.89%, rgba(242, 212, 194, 0) 88.45%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
+.prata {
+  background: linear-gradient(90deg, #A5BBCC 0%, #FFFFFF 100%), linear-gradient(92.43deg, rgba(255, 255, 255, 0) 30.84%, #FFFFFF 58.89%, #9AAEBD 88.45%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
+.ouro {
+  background: linear-gradient(90deg, #9F6C35 0%, #CE9D5B 100%), linear-gradient(91.6deg, #6B4226 15.82%, #F7DEAD 46.67%, rgba(166, 133, 98, 0) 70.69%, #6B4226 88.59%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+}
+
 section {
   width: 100%;
   height: 100vh;
