--- a/styles/style.scss
+++ b/styles/style.scss
@@ -214,7 +214,7 @@ main {
             width: 100%;
             left: 50%;
             transform: translateX(-50%);
-            padding-left: 430px;
+            padding-left: 800px;
             padding-bottom: 80px;
             letter-spacing: 6%;
             line-height: 20px;
@@ -231,6 +231,91 @@ main {
             width: 350px;
             height: 70px;
             font-size: 1.5em;
+        }
+    }
+}
+
+#s6 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 100px;
+
+    img {
+        width: 250px;
+    }
+
+    #tabela-de-planos {
+        display: flex;
+        gap: 64px;
+        padding-top: 100px;
+
+        p {
+            font-family: $font-1;
+            color: white;
+        }
+
+        .plano {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+            width: 330px;
+
+            .planos-textos {
+                display: flex;
+                flex-direction: column;
+                text-align: center;
+                gap: 12px;
+    
+                p {
+                    font-size: 2em;
+                }
+    
+                .text-min {
+                    font-size: 1em;
+                }
+            }
+        }
+
+        .divider {
+            background-color: white;
+            width: 98%;
+            height: 2px;
+        }
+
+        Button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 98%;
+            height: 40px;
+            border-radius: 4px;
+            border: none;
+            p {
+                font-size: $font-1;
+                color: black;
+            }
+        }
+    }
+
+    #confirmação-planos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+        gap: 32px;
+        width: 100%;
+
+        button {
+            width: 250px;
+        }
+
+        #plano-info {
+            background-color: white;
+            width: 85%;
+            height: 200px;
+            border-radius: 12px;
         }
     }
 }
@@ -305,7 +390,7 @@ main {
         padding: 40px 0px !important;
 
         img {
-            height: 230px;
+            height: 200px;
         }
     }
 
@@ -454,7 +539,7 @@ main {
         padding-top: 80px !important;
 
         img {
-            height: 180px;
+            height: 140px;
         }
     }
 
