--- a/styles/style.css
+++ b/styles/style.css
@@ -280,6 +280,10 @@ main {
   border-radius: 12px;
 }
 
+#planos-mobile {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
   #s1 {
     background: url("../img/img01-mobile.png") center center no-repeat;
@@ -370,6 +374,34 @@ main {
     width: 200px !important;
     height: 50px !important;
     font-size: 1em !important;
+  }
+  #tabela-de-planos, #confirmação-planos {
+    display: none !important;
+  }
+  #s6 {
+    display: flex;
+    flex-direction: column;
+  }
+  #s6 img {
+    padding-top: 80px;
+    width: 180px !important;
+  }
+  #s6 #planos-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding-top: 50px;
+    gap: 32px;
+  }
+  #s6 #planos-mobile button {
+    width: 200px;
+  }
+  #s6 #planos-mobile #plano-info {
+    background-color: white;
+    width: 90%;
+    height: 300px;
+    border-radius: 12px;
   }
   .br-desk {
     display: none;
@@ -464,6 +496,42 @@ main {
     display: none;
   }
 }
+.radio-inputs {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 0.5rem;
+  background-color: #EEE;
+  box-sizing: border-box;
+  box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+  padding: 0.25rem;
+  width: 300px;
+  font-size: 14px;
+}
+.radio-inputs .radio {
+  flex: 1 1 auto;
+  text-align: center;
+}
+.radio-inputs .radio Input {
+  display: none;
+}
+.radio-inputs .radio .name {
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  border: none;
+  padding: 0.5rem 0;
+  color: rgb(51, 65, 85);
+  transition: all 0.15s ease-in-out;
+}
+
+.radio-inputs .radio input:checked + .name {
+  background-color: #fff;
+  font-weight: 600;
+}
+
 .text-bold {
   font-weight: 900;
 }
