--- a/styles/style.scss
+++ b/styles/style.scss
@@ -320,6 +320,10 @@ main {
     }
 }
 
+#planos-mobile {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     #s1 {
         background: url('../img/img01-mobile.png') center center no-repeat;
@@ -432,6 +436,40 @@ main {
         width: 200px !important;
         height: 50px !important;
         font-size: 1em !important;
+    }
+
+    #tabela-de-planos, #confirmação-planos {
+        display: none !important;
+    }
+
+    #s6 {
+        display: flex;
+        flex-direction: column;
+
+        img {
+            padding-top: 80px;
+            width: 180px !important;
+        }
+
+        #planos-mobile {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            padding-top: 50px;
+            gap: 32px;
+
+            button {
+                width: 200px;
+            }
+
+            #plano-info {
+                background-color: white;
+                width: 90%;
+                height: 300px;
+                border-radius: 12px;
+            }
+        }
     }
 
     .br-desk {
@@ -555,6 +593,45 @@ main {
     .br-mob {
         display: none;
     }
+}
+
+.radio-inputs {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    border-radius: 0.5rem;
+    background-color: #EEE;
+    box-sizing: border-box;
+    box-shadow: 0 0 0px 1px rgba(0, 0, 0, 0.06);
+    padding: 0.25rem;
+    width: 300px;
+    font-size: 14px;
+
+    .radio {
+        flex: 1 1 auto;
+        text-align: center;
+
+        Input {
+            display: none;
+        }
+
+        .name {
+            display: flex;
+            cursor: pointer;
+            align-items: center;
+            justify-content: center;
+            border-radius: 0.5rem;
+            border: none;
+            padding: .5rem 0;
+            color: rgba(51, 65, 85, 1);
+            transition: all .15s ease-in-out;
+        }
+    }
+}
+
+.radio-inputs .radio input:checked + .name {
+    background-color: #fff;
+    font-weight: 600;
 }
 
 
