Partes finais do projeto!

--- a/styles/style.css
+++ b/styles/style.css
@@ -274,10 +274,17 @@ main {
   width: 250px;
 }
 #s6 #confirmação-planos #plano-info {
+  display: flex;
+  align-items: center;
   background-color: white;
   width: 85%;
   height: 200px;
   border-radius: 12px;
+}
+#s6 #confirmação-planos #plano-info p {
+  text-align: center;
+  width: 100%;
+  max-height: 100%;
 }
 
 #planos-mobile {
@@ -494,6 +501,9 @@ main {
   }
   .br-mob {
     display: none;
+  }
+  #web-info-bronze {
+    font-size: 2em;
   }
 }
 .radio-inputs {
