--- a/styles/style.css
+++ b/styles/style.css
@@ -116,31 +116,36 @@ main {
   background-size: cover;
 }
 #s3 #s3-container {
-  width: 100%;
-  height: 100%;
   display: flex;
+  align-items: center;
   flex-direction: column;
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 #s3 #s3-container #s3-title {
   display: flex;
   justify-content: center;
 }
 #s3 #s3-container #s3-carroucel {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-inline: auto;
+  max-width: 80%;
+  -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
 }
 #s3 #s3-container #s3-carroucel #carrousel-container {
   display: flex;
-  transition: transform 0.5s ease-in-out;
-  transform: translateX(0);
-  padding-top: 20px;
-  padding-left: 5px;
+  gap: 10px;
+  width: max-content !important;
+  animation: scroll 15s linear infinite;
 }
 #s3 #s3-container #s3-carroucel #carrousel-container img {
   object-fit: cover;
-  width: 100%;
+}
+#s3 #s3-container #s3-carroucel:hover #carrousel-container {
+  animation-play-state: paused;
 }
 #s3 #s3-container #s3-text {
   display: flex;
@@ -276,10 +281,12 @@ main {
 #s6 #confirmação-planos #plano-info {
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: white;
   width: 85%;
   height: 200px;
   border-radius: 12px;
+  padding: 14px;
 }
 #s6 #confirmação-planos #plano-info p {
   text-align: center;
@@ -343,11 +350,15 @@ main {
     height: 30px;
     padding-top: 50px;
   }
-  #carrousel-container {
-    padding: 40px 0px !important;
+  #s3-carroucel {
+    -webkit-mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent) !important;
+    mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent) !important;
   }
-  #carrousel-container img {
-    height: 200px;
+  #s3-carroucel #carrousel-container {
+    padding: 40px 0px;
+  }
+  #s3-carroucel #carrousel-container img {
+    height: 140px;
   }
   #s3-text {
     display: flex;
@@ -405,8 +416,11 @@ main {
     width: 200px;
   }
   #s6 #planos-mobile #plano-info {
+    display: flex;
+    align-items: start;
+    padding: 16px;
     background-color: white;
-    width: 90%;
+    max-width: 80%;
     height: 300px;
     border-radius: 12px;
   }
@@ -445,11 +459,10 @@ main {
     padding-top: 40px;
   }
   #carrousel-container {
-    padding-left: 64px !important;
-    gap: 64px;
+    padding: 80px 0px !important;
   }
   #carrousel-container img {
-    height: 400px !important;
+    height: 250px;
   }
   #s3-text p {
     padding: 40px 30px;
@@ -487,7 +500,7 @@ main {
     padding-top: 80px;
   }
   #carrousel-container {
-    padding-top: 80px !important;
+    padding: 40px 10px !important;
   }
   #carrousel-container img {
     height: 140px;
@@ -502,8 +515,9 @@ main {
   .br-mob {
     display: none;
   }
-  #web-info-bronze {
-    font-size: 2em;
+  .resizableText {
+    text-align: center;
+    font-size: calc(1vw + 1vh);
   }
 }
 .radio-inputs {
@@ -542,12 +556,26 @@ main {
   font-weight: 600;
 }
 
+.hide {
+  display: none !important;
+}
+
+.show {
+  display: block !important;
+}
+
 .text-bold {
   font-weight: 900;
 }
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+}
+
+@keyframes scroll {
+  to {
+    translate: -50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
