--- a/styles/style.scss
+++ b/styles/style.scss
@@ -130,11 +130,12 @@ main {
     background-size: cover;
 
     #s3-container {
-        width: 100%;
-        height: 100%;
         display: flex;
+        align-items: center;
         flex-direction: column;
         overflow: hidden;
+        width: 100%;
+        height: 100%;
 
         #s3-title {
             display: flex;
@@ -142,21 +143,27 @@ main {
         }
 
         #s3-carroucel {
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            overflow: hidden;
+            white-space: nowrap;
+            margin-inline: auto;
+            max-width: 80%;
+
+            -webkit-mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+            mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
         
             #carrousel-container {
                 display: flex;
-                transition: transform 0.5s ease-in-out;
-                transform: translateX(0);
-                padding-top: 20px;
-                padding-left: 5px;
+                gap: 10px;
+                width: max-content !important;
+                animation: scroll 15s linear infinite;
     
                 img {
                     object-fit: cover;
-                    width: 100%;
                 }
+            }
+
+            &:hover #carrousel-container {
+                animation-play-state: paused;
             }
         }
 
@@ -314,10 +321,12 @@ main {
         #plano-info {
             display: flex;
             align-items: center;
+            justify-content: center;
             background-color: white;
             width: 85%;
             height: 200px;
             border-radius: 12px;
+            padding: 14px;
 
             p {
                 text-align: center;
@@ -398,11 +407,16 @@ main {
         padding-top: 50px;
     }
 
-    #carrousel-container {
-        padding: 40px 0px !important;
+    #s3-carroucel {
+        -webkit-mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent) !important;
+        mask: linear-gradient(90deg, transparent, white 10%, white 90%, transparent) !important;
 
-        img {
-            height: 200px;
+        #carrousel-container {
+            padding: 40px 0px;
+    
+            img {
+                height: 140px;
+            }
         }
     }
 
@@ -472,8 +486,11 @@ main {
             }
 
             #plano-info {
+                display: flex;
+                align-items: start;
+                padding: 16px;
                 background-color: white;
-                width: 90%;
+                max-width: 80%;
                 height: 300px;
                 border-radius: 12px;
             }
@@ -524,11 +541,10 @@ main {
     }
 
     #carrousel-container {
-        padding-left: 64px !important;
-        gap: 64px;
+        padding: 80px 0px !important;
 
         img {
-            height: 400px !important;
+            height: 250px;
         }
     }
 
@@ -582,7 +598,7 @@ main {
     }
 
     #carrousel-container {
-        padding-top: 80px !important;
+        padding: 40px 10px !important;
 
         img {
             height: 140px;
@@ -602,8 +618,9 @@ main {
         display: none;
     }
 
-    #web-info-bronze {
-        font-size: 2em;
+    .resizableText {
+        text-align: center;
+        font-size: calc(1vw + 1vh);
     }
 }
 
@@ -646,6 +663,13 @@ main {
     font-weight: 600;
 }
 
+.hide {
+    display: none !important;
+}
+
+.show {
+    display: block !important;
+}
 
 .text-bold { font-weight: 900; }
 
@@ -655,4 +679,10 @@ main {
     'wght' 400,
     'GRAD' 0,
     'opsz' 24
+}
+
+@keyframes scroll {
+    to {
+        translate: (-50%);
+    }
 }
