--- a/styles/style.css
+++ b/styles/style.css
@@ -433,6 +433,7 @@ main {
     background-position: calc(50% - 200px) center;
   }
   #s1 #s1-container {
+    align-items: center;
     padding-left: 84px;
   }
   #s2-container {
