--- a/styles/style.scss
+++ b/styles/style.scss
@@ -507,6 +507,7 @@ main {
         background-position: calc(50% + -200px) center;
 
         #s1-container {
+            align-items: center;
             padding-left: 84px;
         }
     }
