--- a/styles/style.css
+++ b/styles/style.css
@@ -418,7 +418,9 @@ main {
   }
   #s6 #planos-mobile #plano-info {
     display: flex;
-    align-items: start;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
     padding: 16px;
     background-color: white;
     max-width: 80%;
