--- a/styles/style.scss
+++ b/styles/style.scss
@@ -490,7 +490,9 @@ main {
 
             #plano-info {
                 display: flex;
-                align-items: start;
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
                 padding: 16px;
                 background-color: white;
                 max-width: 80%;
