--- a/styles/style.css
+++ b/styles/style.css
@@ -423,9 +423,12 @@ main {
     gap: 12px;
     padding: 16px;
     background-color: white;
-    max-width: 80%;
-    height: 300px;
+    max-width: 85%;
+    height: max-content;
     border-radius: 12px;
+  }
+  #s6 #planos-mobile .resizableText {
+    margin-left: 10px;
   }
   .br-desk {
     display: none;
@@ -613,8 +616,10 @@ main {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
-.resizableText {
+.resizableText li {
+  text-align: start;
   font-family: "Roboto", sans-serif !important;
+  padding-top: 6px;
 }
 
 @keyframes scroll {
